<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/main_padding"
    tools:context="com.assigments.parjanya.a16305r004_datarecorder.RecordingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/body_text_size"
                android:text="@string/label"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_spinner"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/body_text_size"
                android:text="@string/start_recording"/>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/start_recording_switch"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/recordings_main_top_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/body_text_size"
                android:text="@string/list_of_last_five_recordings"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/recordings_main_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/recordings_text_size"
                    android:text="@string/empty"
                    android:layout_marginTop="@dimen/recordings_inner_top_margin"
                    android:id="@+id/recording1_text_view"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/recordings_text_size"
                    android:text="@string/empty"
                    android:layout_marginTop="@dimen/recordings_inner_top_margin"
                    android:id="@+id/recording2_text_view"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/recordings_text_size"
                    android:text="@string/empty"
                    android:layout_marginTop="@dimen/recordings_inner_top_margin"
                    android:id="@+id/recording3_text_view"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/recordings_text_size"
                    android:text="@string/empty"
                    android:layout_marginTop="@dimen/recordings_inner_top_margin"
                    android:id="@+id/recording4_text_view"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/recordings_text_size"
                    android:text="@string/empty"
                    android:layout_marginTop="@dimen/recordings_inner_top_margin"
                    android:id="@+id/recording5_text_view"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
